# soroban-counter-contract

./: .gitignore  Cargo.toml  README.MD
frontend/: index.html
src/: lib.rs
test_snapshots/tests/: test_decrement.1.json  test_increment.1.json  test_init.1.json
